Use permanent shared JWT secret for authentication